@@ -1,3 +1,8 @@
+2008-10-09  Alan Modra  <amodra@bigpond.net.au>
+
+	* elf64-ppc.c (ppc64_elf_get_synthetic_symtab): Don't attempt to
+	read plt relocs if no dynamic syms.
+
 2008-10-08  Alan Modra  <amodra@bigpond.net.au>
 
 	* elf.c (assign_file_positions_for_load_sections): When checking
